--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "maths",
+  "name": "mathematics",
   "version": "5.0.1",
   "type": "module",
   "engines": {
@@ -11,6 +11,11 @@
   },
   "author": "",
   "license": "GPL-3.0-or-later",
+  "dependencies": {
+    "@titaniumnetwork-dev/ultraviolet": "^1.0.10",
+    "@tomphttp/bare-server-node": "^1.2.6",
+    "express": "^4.18.2"
+  },
   "devDependencies": {
     "eslint": "^8.36.0",
     "prettier": "^2.8.4"
